Is java supposed to be required?

--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -15,7 +15,7 @@ RUN pacman -S jdk-openjdk --noconfirm
 
 RUN pacman -S git --noconfirm
 
-# (is java really required?)
+# (is java supposed to be required?)
 
 RUN echo "curl --proto '=https' --tlsv1.2 -sSf https://bbup.teod.eu/install.sh | sh" > bbup.txt
 RUN echo '# source bbup.txt' >> bbup.txt
